--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -273,3 +273,12 @@ footer h2 {
   border-top-right-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
 }
+
+[data-dirty="false"] + div {
+  display: none;
+}
+
+[data-dirty="true"] + div {
+  margin-left: 8px;
+  display: block;
+}
